src/test/ui/label/label_break_value_illegal_uses.stderr
error: block label not supported here
  --> $DIR/label_break_value_illegal_uses.rs:8:12
   |
LL |     unsafe 'b: {}
   |            ^^^ not supported here

error: block label not supported here
  --> $DIR/label_break_value_illegal_uses.rs:12:13
   |
LL |     if true 'b: {}
   |             ^^^ not supported here

error: block label not supported here
  --> $DIR/label_break_value_illegal_uses.rs:16:21
   |
LL |     if true {} else 'b: {}
   |                     ^^^ not supported here

error: block label not supported here
  --> $DIR/label_break_value_illegal_uses.rs:20:17
   |
LL |     match false 'b: {
   |                 ^^^ not supported here

error: aborting due to 4 previous errors

